--- a/client/filter.css
+++ b/client/filter.css
@@ -1,6 +1,6 @@
 .rectangularfilter-container {
-    position: fixed;
-    padding-top: 35px; 
+    position: absolute;
+    padding-top: 35px; /* Adjust padding as needed */
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
@@ -40,10 +40,11 @@
 
 
 .cicularfilter-container {
-    position: fixed; 
-    top: 90px; 
-    left: 15px; 
-    width: 50px; 
+    position: absolute; /* This positions the container relative to its nearest positioned ancestor */
+    top: 90px; /* Adjust this value as needed to move the circle up */
+    left: 15px; /* Adjust this value as needed to move the circle to the left */
+   /* position: relative; /* Establishes a positioning context for the overlay */
+    width: 50px; /* Diameter of the circular background */
     height: 50px;
     cursor: pointer;
     display: flex; 
@@ -78,10 +79,11 @@
 
 
 .pillfilter-container {
-    position: fixed; 
-    top: 90px; 
-    left: 15px; 
-    width: 150px; 
+    position: absolute; /* This positions the container relative to its nearest positioned ancestor */
+    top: 90px; /* Adjust this value as needed to move the circle up */
+    left: 15px; /* Adjust this value as needed to move the circle to the left */
+   /* position: relative; /* Establishes a positioning context for the overlay */
+    width: 150px; /* Diameter of the circular background */
     height: 50px;
     cursor: pointer;
     display: flex;
