--- a/client/homeview.css
+++ b/client/homeview.css
@@ -90,9 +90,14 @@
 
 .card-img-top {
     max-width: 100%;
-    height: auto;
+    
     display: block;
     margin: 0 auto;
+    /* Center the image horizontally */
+    width: 300px;  /* Set to desired width */
+    height: 200px;  /* Set to desired height */
+    object-fit: cover;
+
 }
 
 .cardAD .btn.btn-primary.buy-btn {
@@ -117,6 +122,12 @@
     background-color: transparent;
     color: #006267;
 }
+
+.modal-img {
+    width: 300px;  /* Set to desired width */
+    height: 200px;  /* Set to desired height */
+    object-fit: cover;
+  }
 
 /*CardAdModal*/
 .modal-header .cardAd-modal-title {
