Almost done, problem with quantity dropdown

--- a/client/shoppingcart.css
+++ b/client/shoppingcart.css
@@ -38,6 +38,22 @@
     background-color: #adadad;
 }
 
+.quantity-number {
+    cursor: pointer;
+}
+
+.quantity-select {
+    background: transparent;
+    border: none; /* Optional: removes border */
+    width: 60px; /* Set width to fit your layout */
+    box-shadow: none;
+}
+
+.quantity-select:focus {
+    outline: none; /* Optional: removes focus outline */
+}
+
+
 .shoppingcartCard img {
     width: 130px;
     height: 130px;
